--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,15 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  google_fonts: ^4.0.3
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-
 
 flutter:
   uses-material-design: true
