--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,13 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   google_fonts: ^4.0.3
   intl: ^0.18.0
+  smooth_page_indicator: ^1.0.1
   table_calendar: ^3.0.9
   url_launcher: ^6.1.10
 
